--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <h1>TDEE Calculator</h1>
         </div>
         <div class="under_nav">
-            <h2>Calculate your daily maintenance calorie intake with my calculator 🧮</h2>
+            <h2>Calculate your daily maintenance calorie intake with my calculator</h2>
         </div>
     </header>
     <main>
